# aoc2025

./: .clang-format  .gitignore  CMakeLists.txt
inc/: logging.h  utils.h
input/: day05_test.txt
src/: utils.cpp
src/day01/: part1.cpp  part2.cpp
src/day02/: part1.cpp  part2.cpp
src/day03/: part1.cpp  part2.cpp
src/day04/: part1.cpp  part2.cpp
src/day05/: part1.cpp  part2.cpp
src/day06/: part1.cpp  part2.cpp
src/day07/: part1.cpp  part2.cpp
src/day08/: part1.cpp  part2.cpp
src/day09/: part1.cpp  part2.cpp
